feat(workspaces): --include-workspace-root
Adds a new config item that includes the workspace root when running
non-arborist commands (i.e. repo, version, publish).  Arborist will need
to be udpated to look for this flag to change its behavior to include
the workspace root for its functions.

This also changes --workspaces to a trinary, so that setting it to false
will explicitly exclude workspaces altogether.  This is also going to
require an arborist change so that it ignores workspaces altogether.

Co-author: @fritzy

PR-URL: https://github.com/npm/cli/pull/3816
Credit: @isaacs
Close: #3816
Reviewed-by: @wraithgar

--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "write-file-atomic": "^3.0.3"
   },
   "bundleDependencies": [
+    "@isaacs/string-locale-compare",
     "@npmcli/arborist",
     "@npmcli/ci-detect",
     "@npmcli/config",
